# diagnostic_status_ros2

./: CMakeLists.txt  package.xml
config/: config.yml
src/: diagnostic_module.cpp
